--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+php-java-bridge (4.3.0-1) unstable; urgency=low
+
+  * New upstream development version
+  * New high-level API: When the PHP standard library is
+    available (PHP version >= 5.2), java_autoload("libs...")
+    can be used.
+  * It is now possible to access PHP (HTTP- or FastCGI) pool 
+    instances from servlets or frameworks such as Spring or 
+    JSF using the JSR 223 API. See script/EngineFactory.java 
+    and servlet/ContextLoaderListener.java.
+
+ -- Andre Felipe Machado <af-machado@uol.com.br>  Wed, 17 Oct 2007 17:14:22 -0200
+
 php-java-bridge (4.2.2-1) unstable; urgency=low
 
   * New upstream development version.
