--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-java-bridge (5.1.0-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Andre Felipe Machado <andremachado@techforce.com.br>  Fri, 25 Jan 2008 13:02:33 -0200
+
 php-java-bridge (4.3.2-1) unstable; urgency=low
 
   * New upstream development version
