--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,23 @@
+2008-09-29  Jost Boekemeier  <jostb@intern>
+
+    * server/test/InteractiveRequestAbort.java: New test
+    
+    * server/php/java/bridge/Request.java 
+    (handleSubRequests): Must use a one-shot continuation to jump back into the main loop.
+    (parseSubRequestUntilEof): New function
+    
+    * VERSION, php-java-bridge.spec: Version 5.2.3.1 released
+
+
 2008-09-28  Jost Boekemeier  <jostb@intern>
 
-    * server/php/java/script/InvocablePhpScriptEngine.java (eval): Avoid a loop if Java.inc cannot be evaluated
+	* server/php/java/script/InvocablePhpScriptEngine.java 
+	(eval): Avoid a loop if Java.inc cannot be evaluated
     
-    * server/php/java/bridge/JavaBridge.java (ObjectToString): Boolean values display as 1/0
+	* server/php/java/bridge/JavaBridge.java 
+	(ObjectToString): Boolean values display as 1/0
     
-    * VERSION, php-java-bridge.spec: Version 5.2.3 released
-
+    
 2008-09-24  Jost Boekemeier  <jostb@intern>
 
 	* init_cfg.c.in (override_ini_from_cgi): The mono.so
