--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+php-java-bridge (5.3.2-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Andre Felipe Machado <andremachado@techforce.com.br>  Mon, 06 Oct 2008 17:04:08 -0300
+
+
 php-java-bridge (5.2.2-1) unstable; urgency=low
 
   * New upstream release.
